--- a/src/pages/view-ticket.html
+++ b/src/pages/view-ticket.html
@@ -110,6 +110,10 @@
 			margin-top: 5px;
 		}
 
+		#comments-table tr {
+			background: white;
+		}
+
 		#comments-table td {
 			vertical-align: top;
 			padding: 5px;
